# packed_int_n

./: CMakeLists.txt  LICENSE  README.md
include/packed_intn/: packed_intn.hpp
include/tight_uint/: tight_uint.hpp
tests/: CMakeLists.txt  compare_nvidia_micromesh.h  test_benchmark.cpp  test_main.cpp
